2014-10-24  Martin Liska  <mliska@suse.cz>

	* ipa-icf.c (sem_item_optimizer::parse_nonsingleton_classes): Guard
	division by zero in dumps.
	(sem_item_optimizer::merge_classes): Ditto.

2014-10-23  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.c (pa_can_combine_p): Fix typo in last change.

2014-10-23  Ian Lance Taylor  <iant@google.com>

	* tree-vrp.c (extract_range_from_assert): Fix typo in comment.

2014-10-23  Ian Lance Taylor  <iant@google.com>

	* config/mep/mep.h (TARGET_HAS_F_SETLKW): Don't define.

2014-10-23  Jakub Jelinek  <jakub@redhat.com>

	PR debug/63623
	* var-tracking.c (stack_adjust_offset_pre_post_cb): New function.
	(stack_adjust_offset_pre_post): Use it through for_each_inc_dec,
	instead of only handling autoinc in dest if it is a MEM.
	(vt_stack_adjustments): Fix up formatting.

2014-10-23  DJ Delorie  <dj@redhat.com>

	* config/msp430/msp430.c (msp430_print_operand): 'x' modifier is
	independend of -mlarge.
	* config/msp430/constraints.md (Ys): Update comment.

2014-10-23  Evgeny Stupachenko  <evstupac@gmail.com>

	PR target/63534
	PR target/63618
	* cse.c (delete_trivially_dead_insns): Consider PIC register is used
	while it is pseudo.
	* dse.c (deletable_insn_p): Likewise.

2014-10-23  Georg-Johann Lay  <avr@gjlay.de>

	* config/avr/avr.c: Fix GNU coding rules and typos.
	* config/avr/avr.h: Dito.
	* config/avr/avr-c.c: Dito.
	* config/avr/avr.md: Dito.

2014-10-23  Kirill Yukhin  <kirill.yukhin@intel.com>

	* config/i386/sse.md (define_mode_iterator VI1248_AVX512VL_AVX512BW):
	New.
	(define_insn "*abs<mode>2"): Use VI1248_AVX512VL_AVX512BW mode
	iterator.
	(define_expand "abs<mode>2"): Ditto.

2014-10-23  Kirill Yukhin  <kirill.yukhin@intel.com>

	* tree-core.h (tree_var_decl): Extend `function_code' field
	by one bit, move `regdecl_flag' field to ...
	(tree_decl_with_vis): Here.
	* tree.h (DECL_STATIC_CHAIN): Update struct name.

2014-10-23  Richard Biener  <rguenther@suse.de>

	* Makefile.in (BUILD_CPPLIB): Add.