@@ -1,3 +1,8 @@
+2014-10-24  Markus Trippelsdorf  <markus@trippelsdorf.de>
+
+	PR bootstrap/63632
+	* collect2.c (main): Filter out -fno-lto.
+
 2014-10-24  Martin Liska  <mliska@suse.cz>
 
 	* ipa-icf.c (sem_item_optimizer::parse_nonsingleton_classes): Guard
